--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,9 @@
-version: '3.8'
-
 services:
   glasspi:
     build: .
     container_name: glasspi-dashboard
     restart: unless-stopped
-    ports:
-      - "3000:80"
+    network_mode: "host"
     env_file:
       - .env
     environment:
